# bom-bench

./: .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  CLAUDE.md  CONTRIBUTING.md  Makefile  README.md  VALIDATION.md  generate-tomls.py  main.py  pyproject.toml
.claude/: settings.json
.claude/agents/: code-simplifier.md
.claude/commands/: commit.md  issue-implement.md  issue-plan.md  issue.md  scratchpad.md
.claude/skills/test-driven-development/: SKILL.md
.github/: copilot-instructions.md
examples/: pyproject.toml
scripts/: install_deps.sh
src/bom_bench/: __init__.py  __main__.py  cli.py  config.py  console.py  env.py  logging.py  logging_config.py  utils.py
src/bom_bench/benchmarking/: __init__.py  collectors.py  comparison.py  reporters.py  runner.py  storage.py
src/bom_bench/data/: __init__.py  base.py  loader.py
src/bom_bench/data/sources/: gradle_testkit.py  packse.py  pnpm_tests.py
src/bom_bench/fixtures/: __init__.py  loader.py  packse.py
src/bom_bench/generators/gradle/: __init__.py  build_gradle.py
src/bom_bench/generators/pnpm/: __init__.py  package_json.py
src/bom_bench/generators/sbom/: __init__.py  cyclonedx.py
src/bom_bench/generators/uv/: __init__.py  pyproject_toml.py
src/bom_bench/models/: data_source.py  fixture.py  package_manager.py  result.py  sandbox.py  sca.py  sca_tool.py  scenario.py
src/bom_bench/package_managers/: __init__.py  base.py  gradle.py  pip.py  pnpm.py  uv.py
src/bom_bench/parsers/: __init__.py  uv_lock.py
src/bom_bench/plugins/: __init__.py  hookspecs.py
src/bom_bench/plugins/bundled/: __init__.py  cdxgen.py  syft.py
src/bom_bench/renderers/: __init__.py  benchmark_csv.py  benchmark_json.py  benchmark_results_csv.py  benchmark_results_json.py  benchmark_summary_csv.py  benchmark_summary_toml.py  benchmark_toml.py  sca_tool_json.py  sca_tool_results_csv.py  sca_tool_summary_csv.py  sca_tool_toml.py
src/bom_bench/runner/: __init__.py  executor.py  runner.py
src/bom_bench/sandbox/: __init__.py  mise.py  sandbox.py
src/bom_bench/sca_tools/: __init__.py  cdxgen.py  snyk.py  syft.py
tests/: conftest.py
tests/integration/: test_benchmark_cli.py  test_benchmark_smoke.py  test_cli.py  test_e2e_benchmark.py  test_env_integration.py  test_response_hook_integration.py  test_session_hooks.py
tests/unit/: test_benchmark_runner.py  test_bom_bench_exports.py  test_cli.py  test_comparison.py  test_console.py  test_data_sources.py  test_env.py  test_fixture_loader.py  test_fixture_models.py  test_logging.py  test_logging_config.py  test_mise.py  test_models.py  test_package_managers.py  test_packse_plugin.py  test_plugins.py  test_render_results.py  test_renderer_hookspecs.py  test_renderer_models.py  test_runner.py  test_sandbox.py  test_sandbox_models.py  test_sbom_generation.py  test_sca_models.py  test_sca_tool_config.py  test_snyk_plugin.py  test_storage.py  test_syft_plugin.py  test_utils.py
tests/unit/renderers/: test_benchmark_results_csv.py  test_sca_tool_json.py
