[project]
name            = "bom-bench"
version         = "0.2.0"
description     = "Generate package manager manifests and lock files from test scenarios for benchmarking SCA tools"
readme          = "README.md"
requires-python = ">=3.12"
dependencies    = [
    "packse>=0.3.54",
    "cyclonedx-python-lib>=7.0.0",
    "click>=8.0.0",
    "pluggy>=1.3.0",
    "packageurl-python>=0.11.0",
]

[project.scripts]
bom-bench = "bom_bench.cli:main"

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-cov>=7.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/bom_bench"]
