[project]
name            = "bom-bench"
version         = "0.2.0"
description     = "Generate package manager manifests and lock files from test scenarios for benchmarking SCA tools"
readme          = "README.md"
requires-python = ">=3.12"
license         = { text = "MIT" }
dependencies    = [
    "packse>=0.3.54",
    "cyclonedx-python-lib>=7.0.0",
    "typer>=0.15.0",
    "rich>=13.0.0",
    "pluggy>=1.3.0",
    "packageurl-python>=0.11.0",
    "tomlkit>=0.13.0",
]

[project.scripts]
bom-bench = "bom_bench.cli:main"

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-cov>=7.0.0",
    "pre-commit>=4.0.0",
    "ruff>=0.8.0",
    "pyright>=1.1.390",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/bom_bench"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--strict-markers",
    "--strict-config",
    "-ra",
]

[tool.ruff]
# Set line length to match black default
line-length = 100
target-version = "py312"

# Exclude directories
exclude = [
    ".git",
    ".venv",
    "__pycache__",
    "build",
    "dist",
    "*.egg-info",
]

[tool.ruff.lint]
# Enable pycodestyle (E), Pyflakes (F), isort (I), and others
select = [
    "E",   # pycodestyle errors
    "F",   # Pyflakes
    "I",   # isort
    "N",   # pep8-naming
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "SIM", # flake8-simplify
]

ignore = [
    "E501",  # Line too long (handled by formatter)
]

# Allow autofix for all enabled rules
fixable = ["ALL"]
unfixable = []

[tool.ruff.lint.per-file-ignores]
# Tests can use assertions and relative imports
"tests/**/*.py" = ["S101"]

[tool.ruff.format]
# Use double quotes for strings
quote-style = "double"

# Indent with spaces
indent-style = "space"

# Like Black, automatically detect the appropriate line ending
line-ending = "auto"

[tool.pyright]
pythonVersion = "3.12"
typeCheckingMode = "basic"
reportMissingTypeStubs = false

# Include source code for type checking
include = ["src"]
exclude = ["tests"]

# Ignore missing imports for external packages
reportMissingImports = "none"
reportMissingModuleSource = "none"

# Start with basic checks, can tighten later
reportUnknownMemberType = "none"
reportUnknownArgumentType = "none"
reportUnknownVariableType = "none"
reportUnknownParameterType = "none"
reportCallIssue = "none"
